2006-07-21  MenTaLguY  <mental@rydia.net>

	* src/splivarot.cpp:
	
	  patch from John Bintz, adding pref to simplify multiple
	  paths separately

2006-07-21  MenTaLguY  <mental@rydia.net>

	* configure.ac: first shot at implementing --enable-lsb

2006-07-21  MenTaLguY  <mental@rydia.net>

	* src/style.cpp, src/style.h:

	  switch to using sigc++ signals

2006-07-21  MenTaLguY  <mental@rydia.net>

	* src/layer-manager.cpp, src/layer-manager.h:

	  switch to sigc++ signals and manually clean up signal connections
	  (although it may not be strictly necessary to do so here)

2006-07-21  MenTaLguY  <mental@rydia.net>

	* src/document-subset.cpp, src/object-hierarchy.cpp,
	  src/object-hierarchy.h, src/selection.cpp, src/selection.h,
	  src/ui/view/edit-widget.cpp, src/ui/view/edit-widget.h,
	  src/uri-references.cpp, src/uri-references.h:
	
	  switch to sigc++ signals for "modified" and "release"

2006-07-21  MenTaLguY  <mental@rydia.net>

	* src/document.cpp, src/sp-object.cpp, src/sp-object.h:

	  sp_object_invoke_release -> SPObject::releaseReferences,
	  plus the introduction of sigc++ signals for "release" and 
	  "modified" which will eventually replace the GObject signals

2006-07-20  MenTaLguY  <mental@rydia.net>

	* src/libnrtype/RasterFont.h, src/libnrtype/font-instance.h:

	  replace two uses of hash_map with standard STL map

2006-07-18  Bryce Harrington <bryce@bryceharrington.org>
	* src/document.h, src/document.cpp:  Refactoring from mental &
	  bryce to consolidate document update functionality from
	  sp_document_ensure_is_up_to_date() and
	  sp_document_idle_handler().  This is the first step in getting
	  updates of defs (and markers) fixed.

2006-07-18  Tim Dwyer  <Tim.Dwyer@infotech.monash.edu.au>

	* src/graphlayout/graphlayout.cpp,
	  src/conn-avoid-ref.h:
	  We now use connector spacing to determine the minimum space required
	  between shape bounding boxes when graph layout with avoid overlap