@@ -264,6 +264,7 @@ private:
     sigc::connection _sel_changed_connection;
     sigc::connection _reconstruction_start_connection;
     sigc::connection _reconstruction_finish_connection;
+    sigc::connection _commit_connection;
     
     virtual void onPositionSet (double, double);
     virtual void onResized (double, double);
